# SMILE

./: .gitignore  README.md  pyproject.toml
analytical/: analysis.py  bjx_utils.py  inference_models.py  run_analytical.py  run_experiments.py  samplers.py
data/: bikesharing.data  shakespeare_simple.txt
scripts/analytical/mclmc/: banana_anisotropic.json  banana_correlated.json  banana_isotropic.json  banana_spatially_varied.json  example_config.json  funnel_anisotropic.json  funnel_correlated.json  funnel_isotropic.json  funnel_spatially_varied.json  icg_anisotropic.json  icg_correlated.json  icg_isotropic.json  icg_spatially_varied.json
scripts/analytical/pmclmc/: banana_anisotropic.json  banana_correlated.json  banana_isotropic.json  banana_spatially_varied.json  example_config.json  funnel_anisotropic.json  funnel_correlated.json  funnel_isotropic.json  funnel_spatially_varied.json  icg_anisotropic.json  icg_correlated.json  icg_isotropic.json  (+1 more)
scripts/experiment_utils/: pool_results.py
src/: __init__.py  __main__.py  exceptions.py  types.py  utils.py
src/architectures/: __init__.py  components.py  image.py  tabular.py  text.py
src/bnns/: logliks.py  priors.py
src/config/: core.py  data.py  sampler.py  training.py  warmstart.py
src/dataset/: base.py  image.py  tabular.py  text.py  tokenizers.py
src/inference/: evaluation.py  metrics.py  predict.py  sample_loader.py  utils.py
src/kernels/: __init__.py  base.py  sghmc.py  sgld.py  smile.py  warmup.py
src/training/: callbacks.py  sampling.py  scheduler.py  trainer.py  utils.py
(+67 files in other folders)
