[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "src"
version = "0.1.0"
description = "Toolbox for sampling-based inference for Bayesian Neural Networks."
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pyyaml = "^6.0.2"
blackjax = "1.2.2"
optax = "0.2.1"
jax = "0.4.33"
flax = "0.9.0"
dataserious = {git = "https://github.com/Noza23/dataserious.git", extras = ["yaml"]}
tqdm = "^4.66.6"

# Optional dependencies

# NLP
tokenizers = { version = "^0.20.1", optional = true}
tiktoken = { version = "^0.8.0", optional = true}
datasets = {version = "^3.0.2", optional = true}

# CV
torchvision = {version = "^0.20.0", optional = true}
dm-pix = {version = "^0.4.4", optional = true}
virtualenv = "20.28.1"

[tool.poetry.extras]
nlp = ["tokenizers", "tiktoken", "datasets"]
cv = ["torchvision", "dm-pix"]

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.2"
pre-commit = "^4.0.1"
pytest = "^8.3.3"
sphinx = "^8.1.3"
myst-parser = "^4.0.0"
pydata-sphinx-theme = "^0.16.0"
sphinx-autodoc-typehints = "^2.5.0"
requests = "^2.32.3"
sphinx-markdown-tables = "^0.0.17"
recommonmark = "^0.7.1"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.ruff]
line-length = 88
[tool.ruff.lint]
fixable = ["I"]
extend-select = ["I", "T"]
